# android-benchmark-app

./: .gitignore  Cargo.toml  README.md  build.rs
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: aadhaar_verifier_input.json  keccak256.json  rsa_main.json  rsa_main.wasm
android/app/src/main/cpp/: CMakeLists.txt  moproapp.cpp
android/app/src/main/cpp/include/: prover.h
android/app/src/main/java/com/example/moproapp/: Input.kt  MultiplierComponent.kt  Rapidsnark.kt  ZKPTool.kt
ios/MoproApp/: CircuitInputs.swift  ContentView.swift  MoproApp-Bridging-Header.h  aadhaar_verifier_input.json  rapidsnark.swift  rapidsnark_bridge.c  semaphore-32.json  sha256.json  sha256_512.wasm  witnesscalc_aadhaar_verifier.h
ios/MoproApp.xcodeproj/: project.pbxproj
ios/MoproApp/include/: rapidsnarkC-Bridging-Header.h  rapidsnark_bridge.h
ios/MoproiOSBindings/: mopro.swift
ios/MoproiOSBindings/MoproBindings.xcframework/: Info.plist
ios/Rapidsnark.xcframework/: Info.plist
ios/libwitnesscalc_keccak256_256_test.xcframework/: Info.plist
ios/libwitnesscalc_rsa_main.xcframework/: Info.plist
ios/libwitnesscalc_semaphore.xcframework/: Info.plist
ios/libwitnesscalc_semaphore.xcframework/ios-arm64/Headers/: witnesscalc_semaphore.h
ios/libwitnesscalc_sha256_512.xcframework/: Info.plist
src/: lib.rs  mopro.udl
