[package]
name = "android-benchmark-app"
version = "0.1.0"
edition = "2021"

# We're going to build a static library named mopro_bindings
# This library name should not be changed
[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "mopro_bindings"

# Adapters for different proof systems
[features]
default = ["mopro-ffi/circom"]

[dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro" }
rust-witness = { git = "https://github.com/alxkzmn/rust-witness" }
uniffi = { version = "0.28", features = ["cli"] }
# circom_witnesscalc = { git = "https://github.com/chancehudson/circom-witnesscalc.git", branch = "submodule-url" }
num-bigint = "0.4.0"
# serde = { version = "1.0.190", features = ["derive"] }
# serde_json = "1.0.64"
# ark-circom = "0.1.0"
# ark-bn254 = "0.4"
# wasmer = "2.3"
# HALO2_DEPENDENCIES

[build-dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro" }
rust-witness = { git = "https://github.com/alxkzmn/rust-witness" }
uniffi = { version = "0.28", features = ["build"] }

# TODO: fix this
[patch.crates-io]
ark-circom = { git = "https://github.com/zkmopro/circom-compat.git", version = "0.1.0", branch = "wasm-delete" }
